--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -60,7 +60,7 @@
         </div>
 
         <a href="#" class="sidebar-nav-link active">Quản lý </a>
-        <a href="http://localhost:6002/category" class="sidebar-nav-link">Quản lý </a>
+        <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại</a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
