--- a/views/category/getAllCategory.ejs
+++ b/views/category/getAllCategory.ejs
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Categories</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
         rel="stylesheet">
     <!-- Font Awesome -->
@@ -63,7 +62,7 @@
         </div>
 
         <a href="#" class="sidebar-nav-link active">Quản lý </a>
-        <a href="http://localhost:6002/category" class="sidebar-nav-link">Quản lý </a>
+        <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
@@ -74,11 +73,9 @@
 
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h1 class="page-title">All Categories</h1>
-            <!-- Add Product Icon -->
             <a href="/category/create" class="btn btn-info"><i class="fas fa-plus"></i></a>
         </div>
 
-        <!-- Search Input -->
         <div class="mb-3">
             <input type="text" id="searchInput" class="form-control" placeholder="Search by category name" onkeyup="searchCategories()">
         </div>
@@ -97,7 +94,7 @@
                         <td><%= index + 1 %></td>
                         <td><%= category.name %></td>
                         <td>
-                            <a href="/<%= category._id %>" class="btn btn-info btn-sm"><i class="far fa-edit"></i></a>
+                            <a href="/category/update/<%= category._id %>" class="btn btn-info btn-sm"><i class="far fa-edit"></i></a>
                             <form id="deleteCategoryForm_<%= category._id %>" method="POST"
                                 onsubmit="event.preventDefault(); deleteCategory('<%= category._id %>')">
                                 <input type="hidden" name="_method" value="DELETE">
@@ -111,7 +108,6 @@
         </table>
     </div>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Font Awesome -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
@@ -141,7 +137,7 @@
             tr = table.getElementsByTagName("tr");
 
             for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[1]; // Assuming the category name is in the second column
+                td = tr[i].getElementsByTagName("td")[1]; 
                 if (td) {
                     txtValue = td.textContent || td.innerText;
                     if (txtValue.toUpperCase().indexOf(filter) > -1) {
