--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -59,12 +59,15 @@
             <p style="margin-bottom: 1em;"><%= user.email %></p>
         </div>
 
-        <a href="#" class="sidebar-nav-link active">Quản lý </a>
+        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
         <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại</a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
+    </div>
+    <div>
+        <p style="margin-left: 1000px; margin-top: 50px;">Welcome to ...</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
