--- a/views/category/updateCategory.ejs
+++ b/views/category/updateCategory.ejs
@@ -56,7 +56,7 @@
             <p style="margin-bottom: 1em;"><%= user.email %></p>
         </div>
 
-        <a href="#" class="sidebar-nav-link active">Quản lý </a>
+        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
         <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
         <a href="#" class="sidebar-nav-link">Quản lý </a>
