--- a/views/category/getAllCategory.ejs
+++ b/views/category/getAllCategory.ejs
@@ -88,14 +88,12 @@
         <a href="#" class="sidebar-nav-link">Quản lý</a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
     </div>
-    <h1  style="align-items: center; justify-content: center; margin-left: 800px; margin-top: 30px;" >All Categories</h1>
+    <h1 class="text-center mt-5">All Categories</h1>
 
     <div class="container mt-5">
 
         <div class="d-flex justify-content-between align-items-center mb-3">        
-            <button type="submit" style="margin-left: 1160px;">
-                <a  href="/category/create">Thêm danh mục</a>
-            </button>
+            <a href="/category/create" >Thêm danh mục</a>
         </div>
 
         <div class="mb-3">
