--- a/views/question/createQuestion.ejs
+++ b/views/question/createQuestion.ejs
@@ -10,6 +10,9 @@
         body {
             margin: 0;
             font-family: 'Arial';
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
         }
 
         /* Sidebar styles */
@@ -78,7 +81,8 @@
         <a href="#" class="sidebar-nav-link">Quản lý</a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
     </div>
-    <h1 class="mt-5">Create Question</h1>
+    <div class="container mt-5">
+        <h1 class="mt-5" style="margin-left: 500px; margin-top: 20px;">Create Question</h1>
     <form id="createQuestionForm" class="mt-3">
         <div class="form-group">
             <label for="content">Content:</label>
@@ -109,7 +113,7 @@
         <button type="button" onclick="addAnswer()" class="btn btn-primary">Add Answer</button>
         <button type="button" onclick="createQuestion()" class="btn btn-success">Create</button>
     </form>
-
+    </div>
     <script>
         let answerCount = 1;
 
