--- a/views/question/getAllQuestions.ejs
+++ b/views/question/getAllQuestions.ejs
@@ -46,8 +46,7 @@
 
         /* Main content styles */
         main {
-            margin-left: 400px;
-            /* Độ rộng của sidebar */
+            margin-left: 288px;
             padding: 20px;
         }
 
@@ -65,21 +64,16 @@
             border-bottom: 1px solid #ddd;
             border-right: 1px solid #ddd;
             word-wrap: break-word;
-            /* Áp dụng cho tất cả các ô */
         }
 
         th {
             background-color: #f2f2f2;
             text-align: center;
-            /* Căn giữa theo chiều ngang */
             vertical-align: middle;
-            /* Căn giữa theo chiều dọc */
         }
 
-        /* Thêm điều kiện cho word-wrap */
         td {
-            max-width: 550px;
-            /* Độ rộng tối đa của ô  */
+            max-width: 600px;
 
         }
     </style>
@@ -105,91 +99,100 @@
     </div>
 
     <main>
-        <h1 style="align-items: center; justify-content: center; margin-left: 450px; padding: 15px;">Danh sách câu hỏi</h1>
-        <!-- Form lọc theo danh mục -->
-        <form id="categoryFilterForm" method="POST">
-            <label for="categorySelect">Chọn danh mục:</label>
-            <select id="categorySelect" name="category">
-                <% categories.forEach(category=> { %>
-                    <option value="<%= category._id %>">
-                        <%= category.name %>
-                    </option>
-                    <% }); %>
-            </select>
-            <button type="submit">Lọc</button>
-            <button type="submit" style="margin-left: 900px;">
-                <a href="http://localhost:6002/question/create">Thêm câu hỏi</a>
-            </button>
-        </form>
-
-        <!-- Bảng hiển thị dữ liệu -->
-        <table>
-            <thead>
-                <tr>
-                    <th>STT</th>
-                    <th>Content</th>
-                    <th>Category</th>
-                    <th>Answers</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% let index = (currentPage - 1) * 5 + 1; %>
-                    <% questions.forEach(question=> { %>
-                        <tr>
-                            <td>
-                                <%= index %>
-                            </td>
-                            <td>
-                                <%= question.content %>
-                            </td>
-                            <td>
-                                <%= question.category.name %>
-                            </td>
-                            <td>
-                                <ul>
-                                    <% question.answers.forEach(answer=> { %>
-                                        <li>
-                                            <%= answer.answer %> - <%= answer.correct %>
-                                        </li>
-                                        <% }); %>
-                                </ul>
-                            </td>
-                        </tr>
-                        <% index++; %>
+        <h1 style="align-items: center; justify-content: center; margin-left: 450px; padding: 15px;">Danh sách câu hỏi
+        </h1>
+        <% if (typeof totalQuestions !=='undefined' ) { %>
+            <p id="totalQuestions">Tổng số câu hỏi: <%= totalQuestions %>
+            </p>
+            <% } %>
+                <!-- Form lọc theo danh mục -->
+                <form id="categoryFilterForm" method="POST">
+                    <label for="categorySelect">Chọn danh mục:</label>
+                    <select id="categorySelect" name="category">
+                        <% categories.forEach(category=> { %>
+                            <option value="<%= category._id %>">
+                                <%= category.name %>
+                            </option>
                             <% }); %>
-            </tbody>
-        </table>
+                    </select>
+                    <button type="submit">Lọc</button>
+                    <a style="display: flex;" href="http://localhost:6002/question/create">Thêm câu hỏi</a>
 
-        <!-- Nút phân trang -->
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
-                <% if (currentPage> 1) { %>
-                    <li class="page-item">
-                        <a class="page-link" href="?page=1">First</a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a>
-                    </li>
-                    <% } %>
+                </form>
 
-                        <% for (let i=1; i <=totalPages; i++) { %>
-                            <li class="page-item <%= i === currentPage ? 'active' : '' %>">
-                                <a class="page-link" href="?page=<%= i %>">
-                                    <%= i %>
-                                </a>
+                <!-- Bảng hiển thị dữ liệu -->
+                <table>
+                    <thead>
+                        <tr>
+                            <th>STT</th>
+                            <th>Content</th>
+                            <th>Category</th>
+                            <th>Answers</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% let index=(currentPage - 1) * 5 + 1; %>
+                            <% questions.forEach(question=> { %>
+                                <tr>
+                                    <td>
+                                        <%= index %>
+                                    </td>
+                                    <td>
+                                        <%= question.content %>
+                                    </td>
+                                    <td>
+                                        <%= question.category.name %>
+                                    </td>
+                                    <td>
+                                        <ul>
+                                            <% question.answers.forEach(answer=> { %>
+                                                <li>
+                                                    <%= answer.answer %> - <%= answer.correct %>
+                                                </li>
+                                                <% }); %>
+                                        </ul>
+                                    </td>
+                                    <td>
+                                        <form action="/question/update/<%= question._id %>" method="GET">
+                                            <button type="submit">Update</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                                <% index++; %>
+                                    <% }); %>
+                    </tbody>
+                </table>
+                <!-- Nút phân trang -->
+                <nav aria-label="Page navigation">
+                    <ul class="pagination justify-content-center">
+                        <% if (currentPage> 1) { %>
+                            <li class="page-item">
+                                <a class="page-link" href="?page=1">First</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="?page=<%= currentPage - 1 %>">Previous</a>
                             </li>
                             <% } %>
 
-                                <% if (currentPage < totalPages) { %>
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page=<%= totalPages %>">Last</a>
+                                <% for (let i=1; i <=totalPages; i++) { %>
+                                    <li class="page-item <%= i === currentPage ? 'active' : '' %>">
+                                        <a class="page-link" href="?page=<%= i %>">
+                                            <%= i %>
+                                        </a>
                                     </li>
                                     <% } %>
-            </ul>
-        </nav>
+
+                                        <% if (currentPage < totalPages) { %>
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page=<%= currentPage + 1 %>">Next</a>
+                                            </li>
+                                            <li class="page-item">
+                                                <a class="page-link" href="?page=<%= totalPages %>">Last</a>
+                                            </li>
+                                            <% } %>
+                    </ul>
+                </nav>
 
 
     </main>
@@ -223,11 +226,14 @@
             </td>
         `;
                 tbody.appendChild(newRow);
-                index++; // Tăng chỉ số STT lên sau mỗi lần lặp
+                index++;
             });
+            // Cập nhật tổng số câu hỏi sau khi lọc
+            const totalQuestionsElement = document.getElementById('totalQuestions');
+            if (totalQuestionsElement) {
+                totalQuestionsElement.textContent = `Tổng số câu hỏi: ${data.length}`;
+            }
         });
-
-
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
