--- a/views/test/getAllTests.ejs
+++ b/views/test/getAllTests.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Questions</title>
+    <title>All Tests</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -74,7 +74,6 @@
 
         td {
             max-width: 600px;
-
         }
     </style>
 </head>
@@ -90,25 +89,26 @@
             </p>
         </div>
 
-        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
-        <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
-        <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz </a>
-        <a href="#" class="sidebar-nav-link">Quản lý </a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
+        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Manage Questions</a>
+        <a href="http://localhost:6002/category" class="sidebar-nav-link">Category List</a>
+        <a href="http://localhost:6002/test" class="sidebar-nav-link">Manage Quizzes</a>
+        <a href="#" class="sidebar-nav-link">Manage</a>
+        <a href="#" class="sidebar-nav-link">Manage</a>
+        <a href="#" class="sidebar-nav-link">Manage</a>
     </div>
 
     <main>
-        <h1 style="align-items: center; justify-content: center; margin-left: 450px; padding: 15px;">Danh sách bài thi</h1>
+        <h1 style="align-items: center; justify-content: center; margin-left: 450px; padding: 15px;">List of Tests</h1>
         <% if (typeof totalTests !== 'undefined') { %>
-        <p id="totalTests">Tổng số bài thi: <%= totalTests %></p>
+        <p id="totalTests">Total Tests: <%= totalTests %></p>
         <% } %>
 
-        <a href="http://localhost:6002/test/create">Thêm bài thi mới</a>
+        <a href="http://localhost:6002/test/create">Add New Test</a>
 
         <% tests.forEach(test => { %>
             <div>
                 <h2><%= test.name %></h2>
+                <img src="<%= test.image %>" alt="Test Image" style="max-width: 100%;">
                 <p><strong>Category:</strong> <%= test.category.name %></p>
                 <% if (test.questions && test.questions.length > 0) { %>
                     <% test.questions.forEach(question => { %>
@@ -131,7 +131,7 @@
                 <% } else { %>
                     <p>No questions found for this test</p>
                 <% } %>
-                <a href="http://localhost:6002/test/update/<%= test._id %>">Cập nhật</a>
+                <a href="http://localhost:6002/test/update/<%= test._id %>">Update</a>
             </div>
         <% }); %>
         
