--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -67,8 +67,13 @@
         <a href="#" class="sidebar-nav-link">Quản lý</a>
     </div>
     <div>
-        <p style="margin-left: 1000px; margin-top: 50px;">Welcome to ...</p>
+        <p style="margin-left: 800px; margin-top: 50px;">Welcome to ...</p>
     </div>
+
+    <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
+        <source src="/video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
