--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -71,7 +71,7 @@
     </div>
 
     <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
-        <source src="/video.mp4" type="video/mp4">
+        <source src="/mp4-server.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
