--- a/views/test/getAllTests.ejs
+++ b/views/test/getAllTests.ejs
@@ -92,9 +92,9 @@
         <a href="http://localhost:6002/question" class="sidebar-nav-link active">Manage Questions</a>
         <a href="http://localhost:6002/category" class="sidebar-nav-link">Category List</a>
         <a href="http://localhost:6002/test" class="sidebar-nav-link">Manage Quizzes</a>
-        <a href="#" class="sidebar-nav-link">Manage</a>
-        <a href="#" class="sidebar-nav-link">Manage</a>
-        <a href="#" class="sidebar-nav-link">Manage</a>
+        <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
+        <a href="#" class="sidebar-nav-link">Quản lý</a>
+        <a href="#" class="sidebar-nav-link">Quản lý</a>
     </div>
 
     <main>
