--- a/views/category/getAllCategory.ejs
+++ b/views/category/getAllCategory.ejs
@@ -87,7 +87,7 @@
         <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
         <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
         <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz </a>
-        <a href="#" class="sidebar-nav-link">Quản lý </a>
+        <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
         <a href="#" class="sidebar-nav-link">Quản lý</a>
 
